# AcceleratedRecoiling

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  acceleratedRecoilingLib.cpp  build.gradle  cpp-build.gradle  gradle.properties  settings.gradle  version-script
.github/workflows/: build.yml
common/: build.gradle
common/src/main/java/com/wiyuka/acceleratedrecoiling/: AcceleratedRecoiling.java
common/src/main/java/com/wiyuka/acceleratedrecoiling/api/: ICustomBB.java
common/src/main/java/com/wiyuka/acceleratedrecoiling/commands/: ToggleFoldCommand.java
common/src/main/java/com/wiyuka/acceleratedrecoiling/config/: FoldConfig.java
common/src/main/java/com/wiyuka/acceleratedrecoiling/mixin/: EntityGetterMixin.java  EntityMixin.java  LivingEntityMixin.java
common/src/main/java/com/wiyuka/acceleratedrecoiling/natives/: CollisionMapData.java  FFMBackend.java  NativeInterface.java  ParallelAABB.java  TempID.java
fabric/: build.gradle
fabric/src/main/java/com/wiyuka/acceleratedrecoiling/fabric/: AcceleratedRecoilingFabric.java
fabric/src/main/resources/: fabric.mod.json
neoforge/: build.gradle
neoforge/src/main/java/com/wiyuka/acceleratedrecoiling/neoforge/: AcceleratedRecoilingNeoForge.java
neoforge/src/main/java/com/wiyuka/acceleratedrecoiling/neoforge/listeners/: ServerStop.java
src/: aligned.h  compress_table.h  config.cpp  config.h  entity_data.cpp  entity_data.h  entity_data_push.inc  entity_data_push_avx2.inc  entity_data_push_avx512.inc  entity_data_push_neon.inc  entity_data_push_sse41.inc  export.h  intrin_util.cpp  intrin_util.h  jni_entry.cpp  noncopyable.h  parallel_executor.h  radix_sort.cpp  radix_sort.hpp  statistics.cpp  statistics.h
src/main/java/com/wiyuka/acceleratedRecoiling/: AcceleratedRecoiling.java  Config.java
src/main/java/com/wiyuka/acceleratedRecoiling/api/: ICustomBB.java
src/main/java/com/wiyuka/acceleratedRecoiling/commands/: ToggleFoldCommand.java
src/main/java/com/wiyuka/acceleratedRecoiling/listeners/: ServerStop.java
src/main/java/com/wiyuka/acceleratedRecoiling/mixin/: EntityMixin.java  LivingEntityMixin.java  ServerLevelMixin.java
src/main/java/com/wiyuka/acceleratedRecoiling/natives/: NativeInterface.java  ParallelAABB.java
src/main/java/com/wiyuka/acceleratedrecoiling/: AcceleratedRecoiling.java
src/main/java/com/wiyuka/acceleratedrecoiling/api/: ICustomBB.java
src/main/java/com/wiyuka/acceleratedrecoiling/commands/: ToggleFoldCommand.java
src/main/java/com/wiyuka/acceleratedrecoiling/config/: FoldConfig.java
src/main/java/com/wiyuka/acceleratedrecoiling/ffm/: FFM.java
src/main/java/com/wiyuka/acceleratedrecoiling/listeners/: ServerStop.java
src/main/java/com/wiyuka/acceleratedrecoiling/mixin/: EntityGetterMixin.java  EntityMixin.java  FastTagCheckMixin.java  LivingEntityMixin.java  ServerLevelMixin.java
src/main/java/com/wiyuka/acceleratedrecoiling/natives/: AVX2.java  CollisionMapData.java  CollisionMapTemp.java  FFMBackend.java  GPUBackend.java  INativeBackend.java  JNIBackend.java  JavaBackend.java  JavaSIMDBackend.java  JavaVanillaBackend.java  NativeInterface.java  NativeInterfaceFFM.java  NativeInterfaceJNI.java  ParallelAABB.java  TempID.java
src/main/java/com/wiyuka/acceleratedrecoiling/utils/: FastLadderCache.java
src/main/resources/: acceleratedRecoiling.mixins.json  acceleratedrecoiling.accesswidener  acceleratedrecoiling.mixins.json  fabric.mod.json  pack.mcmeta
